add native capability

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,6 +9,7 @@
     />
     <title>Restau-Run</title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="manifest" href="./../manifest.json" />
 
     <link
       rel="stylesheet"
@@ -35,6 +36,10 @@
         </ul>
       </nav>
     </header>
+
+    <button id="add-to-home-screen" style="display: none">
+      Add to Home Screen
+    </button>
 
     <main>
       <section class="hero">
