--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -37,9 +37,7 @@
       </nav>
     </header>
 
-    <button id="add-to-home-screen" style="display: none">
-      Add to Home Screen
-    </button>
+    <button id="add-to-home-screen">Add to Home Screen</button>
 
     <main>
       <section class="hero">
