--- a/src/templates/favorites.html
+++ b/src/templates/favorites.html
@@ -4,17 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Favorite Restaurants - Restau-Run</title>
-    <link rel="stylesheet" href="/src/styles/main.css" />
     <script defer src="favorites.bundle.js"></script>
   </head>
   <body>
     <header>
-      <h1>Favorite Restaurants</h1>
+      <nav class="navbar" role="navigation">
+        <h1>Restau-Run</h1>
+        <button class="hamburger" aria-label="Menu Navigation">
+          <i class="fas fa-bars"></i>
+        </button>
+        <ul class="nav-menu">
+          <li><a href="/">Home</a></li>
+          <li><a href="/favorites.html">Favorite</a></li>
+          <li>
+            <a href="https://github.com/endrialmp" target="_blank">About Us</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-      <section id="favorites-container" class="restaurants-container">
-        <!-- Favorite restaurants will be populated here by JavaScript -->
-      </section>
+      <h1 style="text-align: center">Favorite Restaurants</h1>
+      <section id="favorites-container" class="restaurants-container"></section>
     </main>
+    <footer>
+      <p>Copyright &copy; 2024 Restau-Run</p>
+    </footer>
   </body>
 </html>
